# lean

./: .gitignore  Makefile  README.md
.claude/: settings.local.json
.claude/agent-memory/lean-consensus-architect/: MEMORY.md
.claude/agents/: lean-consensus-architect.md  rust-code-style-reviewer.md
.claude/skills/: lean-consensus.md
.github/workflows/: release.yaml
lean_client/: Cargo.toml  Makefile  config.yaml
lean_client/chain/: Cargo.toml
lean_client/chain/src/: clock.rs  lib.rs  service.rs
lean_client/clock/: Cargo.toml
lean_client/clock/src/: lib.rs
lean_client/containers/: Cargo.toml
lean_client/containers/src/: attestation.rs  block.rs  checkpoint.rs  config.rs  lib.rs  primitives.rs  serde_helpers.rs  slot.rs  state.rs  status.rs  types.rs  validator.rs
lean_client/containers/tests/: common.rs  debug_deserialize.rs  main.rs  state_basic.rs  state_justifications.rs  state_process.rs  state_transition.rs
lean_client/containers/tests/integration_tests/: block_processing.rs  mod.rs  runner.rs  state_transition.rs  test_single_block_with_slot_gap.rs  test_single_empty_block.rs  vote_processing.rs
lean_client/containers/tests/test_vectors/: block_processing.rs  mod.rs  runner.rs  ssz_vectors.rs  verify_signatures.rs
lean_client/containers/tests/unit_tests/: attestation_aggregation.rs  common.rs  state_basic.rs  state_justifications.rs  state_process.rs  state_transition.rs
lean_client/eth3_libp2p/: Cargo.toml
lean_client/eth3_libp2p/src/: lib.rs  misc.rs  version.rs
lean_client/eth3_libp2p/src/common/: mod.rs
lean_client/eth3_libp2p/src/discovery/: enr.rs  mod.rs  subnet_predicate.rs
lean_client/eth3_libp2p/src/peer_manager/: mod.rs  network_behaviour.rs  peerdb.rs
lean_client/eth3_libp2p/src/rpc/: codec.rs  handler.rs  methods.rs  mod.rs  outbound.rs  protocol.rs  rate_limiter.rs  response_limiter.rs  self_limiter.rs
lean_client/eth3_libp2p/src/service/: api_types.rs  gossipsub_scoring_parameters.rs  mod.rs  network_service.rs  utils.rs
lean_client/eth3_libp2p/src/types/: chain_messages.rs  fork_context.rs  globals.rs  mod.rs  pubsub.rs  topics.rs
lean_client/fork_choice/: Cargo.toml  README.md
lean_client/fork_choice/src/: handlers.rs  helpers.rs  lib.rs  store.rs
lean_client/fork_choice/tests/: fork_choice_test_vectors.rs  lmd_ghost.rs  store_integration.rs  test_functions.rs  test_vectors.rs
lean_client/fork_choice/tests/unit_tests/: common.rs  fork_choice.rs  time.rs  validator.rs  votes.rs
lean_client/grandine_version/: Cargo.toml
lean_client/http_api/: Cargo.toml
lean_client/http_api/src/: config.rs  lib.rs  routing.rs  server.rs
lean_client/metrics/: Cargo.toml
lean_client/metrics/src/: helpers.rs  lib.rs  metrics.rs  server.rs
lean_client/networking/: Cargo.toml
lean_client/networking/src/: behaviour.rs  compressor.rs  config.rs  executor.rs  lib.rs  req_resp.rs  task_executor.rs  types.rs
lean_client/networking/src/common/: mod.rs
lean_client/networking/src/discovery/: enr.rs  mod.rs  subnet_predicate.rs
lean_client/networking/src/gossipsub/: config.rs  message.rs  mod.rs  topic.rs
lean_client/networking/src/gossipsub/tests/: config.rs  message_id.rs  mod.rs
lean_client/networking/src/network/: mod.rs  service.rs
lean_client/networking/src/peer_manager/: mod.rs  network_behaviour.rs  peerdb.rs
lean_client/networking/src/peer_manager/peerdb/: mod.rs  peer_info.rs  sync_status.rs
lean_client/networking/src/reqresp/: codec.rs  message.rs  mod.rs  protocol.rs
lean_client/networking/src/rpc/: codec.rs  config.rs  handler.rs  methods.rs  mod.rs  outbound.rs  protocol.rs  rate_limiter.rs  response_limiter.rs  self_limiter.rs
lean_client/networking/src/service/: api_types.rs  behaviour.rs  gossip_cache.rs  gossipsub_scoring_parameters.rs  mod.rs  utils.rs
lean_client/networking/src/types/: enr_fork_id.rs  fork_context.rs  globals.rs  mod.rs  pubsub.rs  subnet.rs  sync_state.rs  topics.rs
lean_client/runtime/: Cargo.toml
lean_client/runtime/src/: actor.rs  chain.rs  clock.rs  dsim.rs  environment.rs  event.rs  lib.rs  network.rs  node.rs  sim.rs  simulation.rs  simulator.rs  validator.rs
lean_client/src/: main.rs
lean_client/test_vectors/fork_choice/devnet/fc/test_attestation_processing/: test_attestation_accumulation_full_validator_set.json  test_attestation_superseding_same_validator.json  test_attestations_move_to_known_between_blocks.json  test_extended_chain_attestation_superseding_pattern.json  test_proposer_attestation_appears_in_latest_new.json  test_slot_gaps_with_attestation_superseding.json
lean_client/test_vectors/fork_choice/devnet/fc/test_attestation_target_selection/: test_attestation_target_advances_with_attestations.json  test_attestation_target_at_genesis_initially.json  test_attestation_target_justifiable_constraint.json  test_attestation_target_with_extended_chain.json  test_attestation_target_with_slot_gaps.json
lean_client/test_vectors/fork_choice/devnet/fc/test_fork_choice_head/: test_head_advances_through_deep_chain.json  test_head_switches_to_heavier_fork.json  test_head_with_deep_fork_split.json  test_head_with_gaps_in_slots.json  test_head_with_large_gaps.json  test_head_with_two_competing_forks.json
lean_client/tests/test_vectors/test_blocks/: test_sequential_blocks.json  test_single_block_with_slot_gap.json  test_single_empty_block.json
lean_client/tests/test_vectors/test_invalid/: test_invalid_proposer.json
lean_client/tests/test_vectors/test_verify_signatures/test_invalid_signatures/: test_invalid_signature.json  test_mixed_valid_invalid_signatures.json
lean_client/tests/test_vectors/test_verify_signatures/test_valid_signatures/: test_proposer_and_attester_signatures.json  test_proposer_signature.json
lean_client/validator/: Cargo.toml
lean_client/validator/src/: keys.rs  lib.rs  service.rs
lean_client/validator/tests/: unit_tests.rs
lean_client/xmss/: Cargo.toml
lean_client/xmss/src/: aggregated_signature.rs  lib.rs  public_key.rs  secret_key.rs  signature.rs
lean_client/xmss/tests/: aggregate.rs  public_key.rs  signing.rs
(+58 files in other folders)
