[package]
name = "fork_choice"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bls = { workspace = true }
containers = { workspace = true }
metrics = { workspace = true }
ssz = { workspace = true }
tracing = { workspace = true }
xmss = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
test-generator = { workspace = true }
