[package]
name = 'http_api'
version = '0.1.0'
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
