[package]
name = 'networking'
edition = { workspace = true }

[dependencies]
alloy-rlp = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
discv5 = { workspace = true }
serde = { workspace = true }
ssz = { workspace = true }
tiny-keccak = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
