[package]
name = 'networking'
edition = { workspace = true }

[dependencies]
alloy-rlp = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
discv5 = { workspace = true }
grandine_version = { workspace = true }
containers = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
prometheus = { workspace = true }
ssz = { workspace = true }
tokio = { workspace = true }
tiny-keccak = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }
snap = { workspace = true }
hex = { workspace = true }
strum = { workspace = true }
typenum = { workspace = true }
async-trait = { workspace = true }
unsigned-varint = { workspace = true }
regex = { workspace = true }
try_from_iterator = { workspace = true }
std_ext = { workspace = true }
tokio-util = { workspace = true }
smallvec = { workspace = true }
sha2 = { workspace = true }
itertools = { workspace = true }
local-ip-address = { workspace = true }
delay_map = { workspace = true }
rand = { workspace = true }
libp2p-mplex = { workspace = true }
