[package]
name = "runtime"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
smallvec = { workspace = true }
bls = { workspace = true }
containers = { workspace = true }
enum-iterator = { workspace = true }
fork_choice = { workspace = true }
libp2p-identity = { workspace = true }
networking = { package = "eth3_libp2p", workspace = true }
ssz = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
xmss = { workspace = true }
