[package]
name = "validator"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
containers = { workspace = true }
env-config = { workspace = true }
fork_choice = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
typenum = { workspace = true }
ethereum-types = { workspace = true }
ssz = { workspace = true }
xmss = { workspace = true }
zeroize = { workspace = true }
