[package]
name = "validator"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chain = { path = "../chain" }
containers = { workspace = true }
ethereum-types = { workspace = true }
fork_choice = { workspace = true }
metrics = { workspace = true }
eth3_libp2p = { workspace = true }
serde_yaml = { workspace = true }
ssz = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
typenum = { workspace = true }
xmss = { workspace = true }
zeroize = { workspace = true }
